// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render invalid state 1`] = `
<div
  className="cf-lzhvgp"
/>
`;

exports[`should render invalid state with validation errors 1`] = `
<div
  className="cf-lzhvgp"
>
  <p>
    This is required
  </p>
</div>
`;
